<resources>
    <string name="app_name">Memes Finder</string>
    <string name="memes_filter">Memes Finder</string>
    <string name="hello_user"></string>
    <string name="storage_memes_button_text">Find meme by template from storage</string>
    <string name="popular_template_button_text">Find Meme by popular template</string>
    <string name="all_memes_button_text">Find All memes</string>
    <string name="title_activity_home_screen">HomeScreenActivity</string>
    <string name="all_memes_headline">All memes</string>
    <string name="home_page_hello_message_format">Welcome back, %s !</string>
    <string name="home_page_hello_message_new_format">Welcome !</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="already_have_sign_in">Already have an account? Sign in</string>
    <string name="dont_have_yet_sign_up">don\'t have an account yet? Sign up</string>
    <string name="sign_in_with">Sign in with:</string>
    <string name="sign_in">Sign in</string>

    <string name="facebook_application_id" translatable="false">1402506486625649</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb1402506486625649</string>
    <string name="no_results">No results found</string>
    <string name="loading">Loading...</string>

</resources>